treino flex box

--- a/index.html
+++ b/index.html
@@ -7,10 +7,56 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header> 01 HEADER</header>
-    <aside> 02 ASIDE</aside>
-    <main> 03 MAIN</main>
-    <footer> 04 FOOTER</footer>
+    <header> 
+        <h1>Portfolio de Andreia Pacheco</h1>
+    </header>
+    <aside> 
+        <ul>
+            <li>linkedin.com/in/andreiapacheco</li>
+            <li id="tel">+55 11 99804 6235</li>
+            <li>github.com/AndreiaFullStack</li>
+            <li>andreiagestaocultural@gmail.com</li>
+        </ul>    
+    </aside>
+    <main> 
+        <section>
+            <article>
+                <h3> Job 1</h3>
+                <img src="./assets/img/placeholder.png" alt="placeholder">
+                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore asperiores ea praesentium, omnis deserunt laborum maxime, ab sit veritatis assumenda error. Tempore, debitis sequi dolore rem doloremque odit facilis eveniet.</p>
+            </article>
+            <article>
+                <h3> Job 2</h3>
+                <img src="./assets/img/placeholder.png" alt="placeholder">
+                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore asperiores ea praesentium, omnis deserunt laborum maxime, ab sit veritatis assumenda error. Tempore, debitis sequi dolore rem doloremque odit facilis eveniet.</p>
+            </article>
+
+            <article>
+                <h3> Job 3</h3>
+                <img src="./assets/img/placeholder.png" alt="placeholder">
+                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore asperiores ea praesentium, omnis deserunt laborum maxime, ab sit veritatis assumenda error. Tempore, debitis sequi dolore rem doloremque odit facilis eveniet.</p>
+            </article>
+            <article>
+                <h3>Job 4</h3>
+                <img src="./assets/img/placeholder.png" alt="placeholder">
+                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore asperiores ea praesentium, omnis deserunt laborum maxime, ab sit veritatis assumenda error. Tempore, debitis sequi dolore rem doloremque odit facilis eveniet.</p>
+            </article>
+            <article>
+                <h3>Job 5</h3>
+                <img src="./assets/img/placeholder.png" alt="placeholder">
+                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore asperiores ea praesentium, omnis deserunt laborum maxime, ab sit veritatis assumenda error. Tempore, debitis sequi dolore rem doloremque odit facilis eveniet.</p>
+            </article>
+            
+        </section>
+    </main>
+    <footer> 
+        <ul>
+            <li>linkedin.com/in/andreiapacheco</li>
+            <li>github.com/AndreiaFullStack</li>
+            <li>andreiagestaocultural@gmail.com</li>
+            <li>+55 11 99804 6235</li>
+        </ul>
+    </footer>
 
 </body>
 </html>
